src/objects/Product__c.object
<CustomObject>
    <description>This is populated by ODS batch delta loads.</description>
    <fields>
        <fullName>Air_Condition__c</fullName>
        <label>Air Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Type__c</fullName>
        <label>Body Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cylinders__c</fullName>
        <label>Cylinders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Door_Type__c</fullName>
        <label>Door Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drive_Train__c</fullName>
        <label>Drive Train</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immobilizer_Indicator__c</fullName>
        <label>Immobilizer Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDL_YR_CD__c</fullName>
        <description>MDL_YR_CD
Model Year + Model Code to provide a unique identifier for the external system that is loading.</description>
        <externalId>true</externalId>
        <label>MDL YR CD</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Model_Code__c</fullName>
        <label>Model Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Grade_Code__c</fullName>
        <label>Model Grade Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Group_Code__c</fullName>
        <label>Model Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Group__c</fullName>
        <label>Model Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <label>Model Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motive_Power__c</fullName>
        <label>Motive Power</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>A   = Honda 
C   = Acura 
M  = Motorcycle 
P  = Power Equipment</description>
        <inlineHelpText>A   = Honda 
C   = Acura 
M  = Motorcycle 
P  = Power Equipment</inlineHelpText>
        <label>Product Line (ODS)</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Line_frontend__c</fullName>
        <formula>CASE(Product_Line__c,
&apos;A&apos;,
&apos;Honda&apos;,
&apos;C&apos;,
&apos;Acura&apos;,
&apos;M&apos;,
&apos;Motorcycle&apos;,
&apos;P&apos;,
&apos;Power Equipment&apos;,
&apos;Unknown&apos;)</formula>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telematic_Flag__c</fullName>
        <label>Telematic Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transmission_Speed__c</fullName>
        <label>Transmission Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wheelbase__c</fullName>
        <label>Wheelbase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XMITN_Code__c</fullName>
        <label>XMITN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XM_Radio__c</fullName>
        <label>XM Radio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Line_frontend__c</columns>
        <columns>MDL_YR_CD__c</columns>
        <columns>Model_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Product Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>